src/test/ui/feature-gates/feature-gate-track_caller.stderr
error[E0658]: the `#[track_caller]` attribute is an experimental feature
  --> $DIR/feature-gate-track_caller.rs:1:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/47809
   = help: add `#![feature(track_caller)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
